src/test/deca/context/invalid/resultats/test_object_definition-cont.res
./src/test/deca/context/invalid/test_object_definition.deca:14:0: The class  Object is already defined 
